--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "babel-node ./bin/www --presets es2015"
   },
   "dependencies": {
+     "babel-cli": "^6.24.1",
     "body-parser": "~1.17.1",
     "cookie-parser": "~1.4.3",
     "debug": "~2.6.3",
