--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "babel-node ./bin/www --presets es2015"
+    "start": "babel-node ./site/bin/www --presets es2015"
   },
   "dependencies": {
      "babel-cli": "^6.24.1",
